// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadConfig can load config objects 1`] = `
Object {
  "cacheStores": Array [],
  "cacheVersion": "1.0",
  "maxWorkers": 2,
  "projectRoot": "/",
  "reporter": null,
  "resetCache": false,
  "resolver": Object {
    "assetExts": Array [
      "bmp",
      "gif",
      "jpg",
      "jpeg",
      "png",
      "psd",
      "svg",
      "webp",
      "m4v",
      "mov",
      "mp4",
      "mpeg",
      "mpg",
      "webm",
      "aac",
      "aiff",
      "caf",
      "m4a",
      "mp3",
      "wav",
      "html",
      "pdf",
      "yaml",
      "yml",
      "otf",
      "ttf",
      "zip",
    ],
    "assetResolutions": Array [
      "1",
      "1.5",
      "2",
      "3",
      "4",
    ],
    "blockList": /\\(\\\\/__tests__\\\\/\\.\\*\\)\\$/,
    "dependencyExtractor": undefined,
    "disableHierarchicalLookup": false,
    "emptyModulePath": "metro-runtime/src/modules/empty-module",
    "enableGlobalPackages": false,
    "extraNodeModules": Object {},
    "hasteImplModulePath": undefined,
    "nodeModulesPaths": Array [],
    "platforms": Array [
      "ios",
      "android",
      "windows",
      "web",
    ],
    "requireCycleIgnorePatterns": Array [
      /\\(\\^\\|\\\\/\\|\\\\\\\\\\)node_modules\\(\\$\\|\\\\/\\|\\\\\\\\\\)/,
    ],
    "resolveRequest": null,
    "resolverMainFields": Array [
      "browser",
      "main",
    ],
    "sourceExts": Array [
      "js",
      "jsx",
      "json",
      "ts",
      "tsx",
    ],
    "unstable_conditionNames": Array [
      "require",
      "import",
    ],
    "unstable_conditionsByPlatform": Object {
      "web": Array [
        "browser",
      ],
    },
    "unstable_enablePackageExports": false,
    "unstable_enableSymlinks": true,
    "useWatchman": true,
  },
  "serializer": Object {
    "createModuleIdFactory": [Function],
    "customSerializer": null,
    "experimentalSerializerHook": [Function],
    "getModulesRunBeforeMainModule": [Function],
    "getPolyfills": [Function],
    "getRunModuleStatement": [Function],
    "isThirdPartyModule": [Function],
    "polyfillModuleNames": Array [],
    "processModuleFilter": [Function],
  },
  "server": Object {
    "enhanceMiddleware": [Function],
    "forwardClientLogs": true,
    "port": 8081,
    "rewriteRequestUrl": [Function],
    "unstable_serverRoot": null,
    "useGlobalHotkey": true,
    "verifyConnections": false,
  },
  "stickyWorkers": true,
  "symbolicator": Object {
    "customizeFrame": [Function],
    "customizeStack": [Function],
  },
  "transformer": Object {
    "allowOptionalDependencies": false,
    "assetPlugins": Array [],
    "assetRegistryPath": "missing-asset-registry-path",
    "asyncRequireModulePath": "metro-runtime/src/modules/asyncRequire",
    "babelTransformerPath": "metro-babel-transformer",
    "dynamicDepsInPackages": "throwAtRuntime",
    "enableBabelRCLookup": true,
    "enableBabelRuntime": true,
    "getTransformOptions": [Function],
    "globalPrefix": "",
    "hermesParser": false,
    "minifierConfig": Object {
      "compress": Object {
        "reduce_funcs": false,
      },
      "mangle": Object {
        "toplevel": false,
      },
      "output": Object {
        "ascii_only": true,
        "quote_style": 3,
        "wrap_iife": true,
      },
      "sourceMap": Object {
        "includeSources": false,
      },
      "toplevel": false,
    },
    "minifierPath": "metro-minify-terser",
    "optimizationSizeLimit": 153600,
    "publicPath": "/assets",
    "transformVariants": Object {
      "default": Object {},
    },
    "unstable_allowRequireContext": false,
    "unstable_compactOutput": false,
    "unstable_dependencyMapReservedName": null,
    "unstable_disableModuleWrapping": false,
    "unstable_disableNormalizePseudoGlobals": false,
    "unstable_workerThreads": false,
    "workerPath": "metro/src/DeltaBundler/Worker",
  },
  "transformerPath": "",
  "unstable_perfLoggerFactory": [Function],
  "watchFolders": Array [
    "/",
  ],
  "watcher": Object {
    "additionalExts": Array [
      "cjs",
      "mjs",
    ],
    "healthCheck": Object {
      "enabled": false,
      "filePrefix": ".metro-health-check",
      "interval": 30000,
      "timeout": 5000,
    },
    "unstable_workerThreads": false,
    "watchman": Object {
      "deferStates": Array [
        "hg.update",
      ],
    },
  },
}
`;

exports[`loadConfig can load the config from a path 1`] = `
Object {
  "cacheStores": Array [],
  "cacheVersion": "1.0",
  "maxWorkers": 2,
  "projectRoot": "/",
  "reporter": null,
  "resetCache": false,
  "resolver": Object {
    "assetExts": Array [
      "bmp",
      "gif",
      "jpg",
      "jpeg",
      "png",
      "psd",
      "svg",
      "webp",
      "m4v",
      "mov",
      "mp4",
      "mpeg",
      "mpg",
      "webm",
      "aac",
      "aiff",
      "caf",
      "m4a",
      "mp3",
      "wav",
      "html",
      "pdf",
      "yaml",
      "yml",
      "otf",
      "ttf",
      "zip",
    ],
    "assetResolutions": Array [
      "1",
      "1.5",
      "2",
      "3",
      "4",
    ],
    "blockList": /\\(\\\\/__tests__\\\\/\\.\\*\\)\\$/,
    "dependencyExtractor": undefined,
    "disableHierarchicalLookup": false,
    "emptyModulePath": "metro-runtime/src/modules/empty-module",
    "enableGlobalPackages": false,
    "extraNodeModules": Object {},
    "hasteImplModulePath": undefined,
    "nodeModulesPaths": Array [],
    "platforms": Array [
      "ios",
      "android",
      "windows",
      "web",
    ],
    "requireCycleIgnorePatterns": Array [
      /\\(\\^\\|\\\\/\\|\\\\\\\\\\)node_modules\\(\\$\\|\\\\/\\|\\\\\\\\\\)/,
    ],
    "resolveRequest": null,
    "resolverMainFields": Array [
      "browser",
      "main",
    ],
    "sourceExts": Array [
      "js",
      "jsx",
      "json",
      "ts",
      "tsx",
    ],
    "unstable_conditionNames": Array [
      "require",
      "import",
    ],
    "unstable_conditionsByPlatform": Object {
      "web": Array [
        "browser",
      ],
    },
    "unstable_enablePackageExports": false,
    "unstable_enableSymlinks": true,
    "useWatchman": true,
  },
  "serializer": Object {
    "createModuleIdFactory": [Function],
    "customSerializer": null,
    "experimentalSerializerHook": [Function],
    "getModulesRunBeforeMainModule": [Function],
    "getPolyfills": [Function],
    "getRunModuleStatement": [Function],
    "isThirdPartyModule": [Function],
    "polyfillModuleNames": Array [],
    "processModuleFilter": [Function],
  },
  "server": Object {
    "enhanceMiddleware": [Function],
    "forwardClientLogs": true,
    "port": 8081,
    "rewriteRequestUrl": [Function],
    "unstable_serverRoot": null,
    "useGlobalHotkey": true,
    "verifyConnections": false,
  },
  "stickyWorkers": true,
  "symbolicator": Object {
    "customizeFrame": [Function],
    "customizeStack": [Function],
  },
  "transformer": Object {
    "allowOptionalDependencies": false,
    "assetPlugins": Array [],
    "assetRegistryPath": "missing-asset-registry-path",
    "asyncRequireModulePath": "metro-runtime/src/modules/asyncRequire",
    "babelTransformerPath": "metro-babel-transformer/src/index.js",
    "dynamicDepsInPackages": "throwAtRuntime",
    "enableBabelRCLookup": true,
    "enableBabelRuntime": true,
    "getTransformOptions": [Function],
    "globalPrefix": "",
    "hermesParser": false,
    "minifierConfig": Object {
      "compress": Object {
        "reduce_funcs": false,
      },
      "mangle": Object {
        "toplevel": false,
      },
      "output": Object {
        "ascii_only": true,
        "quote_style": 3,
        "wrap_iife": true,
      },
      "sourceMap": Object {
        "includeSources": false,
      },
      "toplevel": false,
    },
    "minifierPath": "metro-minify-terser",
    "optimizationSizeLimit": 153600,
    "publicPath": "/assets",
    "transformVariants": Object {
      "default": Object {},
    },
    "unstable_allowRequireContext": false,
    "unstable_compactOutput": false,
    "unstable_dependencyMapReservedName": null,
    "unstable_disableModuleWrapping": false,
    "unstable_disableNormalizePseudoGlobals": false,
    "unstable_workerThreads": false,
    "workerPath": "metro/src/DeltaBundler/Worker",
  },
  "transformerPath": "",
  "unstable_perfLoggerFactory": [Function],
  "watchFolders": Array [
    "/",
  ],
  "watcher": Object {
    "additionalExts": Array [
      "cjs",
      "mjs",
    ],
    "healthCheck": Object {
      "enabled": false,
      "filePrefix": ".metro-health-check",
      "interval": 30000,
      "timeout": 5000,
    },
    "unstable_workerThreads": false,
    "watchman": Object {
      "deferStates": Array [
        "hg.update",
      ],
    },
  },
}
`;

exports[`loadConfig can load the config from a path pointing to a directory 1`] = `
Object {
  "cacheStores": Array [],
  "cacheVersion": "1.0",
  "maxWorkers": 2,
  "projectRoot": "/",
  "reporter": null,
  "resetCache": false,
  "resolver": Object {
    "assetExts": Array [
      "bmp",
      "gif",
      "jpg",
      "jpeg",
      "png",
      "psd",
      "svg",
      "webp",
      "m4v",
      "mov",
      "mp4",
      "mpeg",
      "mpg",
      "webm",
      "aac",
      "aiff",
      "caf",
      "m4a",
      "mp3",
      "wav",
      "html",
      "pdf",
      "yaml",
      "yml",
      "otf",
      "ttf",
      "zip",
    ],
    "assetResolutions": Array [
      "1",
      "1.5",
      "2",
      "3",
      "4",
    ],
    "blockList": /\\(\\\\/__tests__\\\\/\\.\\*\\)\\$/,
    "dependencyExtractor": undefined,
    "disableHierarchicalLookup": false,
    "emptyModulePath": "metro-runtime/src/modules/empty-module",
    "enableGlobalPackages": false,
    "extraNodeModules": Object {},
    "hasteImplModulePath": undefined,
    "nodeModulesPaths": Array [],
    "platforms": Array [
      "ios",
      "android",
      "windows",
      "web",
    ],
    "requireCycleIgnorePatterns": Array [
      /\\(\\^\\|\\\\/\\|\\\\\\\\\\)node_modules\\(\\$\\|\\\\/\\|\\\\\\\\\\)/,
    ],
    "resolveRequest": null,
    "resolverMainFields": Array [
      "browser",
      "main",
    ],
    "sourceExts": Array [
      "js",
      "jsx",
      "json",
      "ts",
      "tsx",
    ],
    "unstable_conditionNames": Array [
      "require",
      "import",
    ],
    "unstable_conditionsByPlatform": Object {
      "web": Array [
        "browser",
      ],
    },
    "unstable_enablePackageExports": false,
    "unstable_enableSymlinks": true,
    "useWatchman": true,
  },
  "serializer": Object {
    "createModuleIdFactory": [Function],
    "customSerializer": null,
    "experimentalSerializerHook": [Function],
    "getModulesRunBeforeMainModule": [Function],
    "getPolyfills": [Function],
    "getRunModuleStatement": [Function],
    "isThirdPartyModule": [Function],
    "polyfillModuleNames": Array [],
    "processModuleFilter": [Function],
  },
  "server": Object {
    "enhanceMiddleware": [Function],
    "forwardClientLogs": true,
    "port": 8081,
    "rewriteRequestUrl": [Function],
    "unstable_serverRoot": null,
    "useGlobalHotkey": true,
    "verifyConnections": false,
  },
  "stickyWorkers": true,
  "symbolicator": Object {
    "customizeFrame": [Function],
    "customizeStack": [Function],
  },
  "transformer": Object {
    "allowOptionalDependencies": false,
    "assetPlugins": Array [],
    "assetRegistryPath": "missing-asset-registry-path",
    "asyncRequireModulePath": "metro-runtime/src/modules/asyncRequire",
    "babelTransformerPath": "metro-babel-transformer/src/index.js",
    "dynamicDepsInPackages": "throwAtRuntime",
    "enableBabelRCLookup": true,
    "enableBabelRuntime": true,
    "getTransformOptions": [Function],
    "globalPrefix": "",
    "hermesParser": false,
    "minifierConfig": Object {
      "compress": Object {
        "reduce_funcs": false,
      },
      "mangle": Object {
        "toplevel": false,
      },
      "output": Object {
        "ascii_only": true,
        "quote_style": 3,
        "wrap_iife": true,
      },
      "sourceMap": Object {
        "includeSources": false,
      },
      "toplevel": false,
    },
    "minifierPath": "metro-minify-terser",
    "optimizationSizeLimit": 153600,
    "publicPath": "/assets",
    "transformVariants": Object {
      "default": Object {},
    },
    "unstable_allowRequireContext": false,
    "unstable_compactOutput": false,
    "unstable_dependencyMapReservedName": null,
    "unstable_disableModuleWrapping": false,
    "unstable_disableNormalizePseudoGlobals": false,
    "unstable_workerThreads": false,
    "workerPath": "metro/src/DeltaBundler/Worker",
  },
  "transformerPath": "",
  "unstable_perfLoggerFactory": [Function],
  "watchFolders": Array [
    "/",
  ],
  "watcher": Object {
    "additionalExts": Array [
      "cjs",
      "mjs",
    ],
    "healthCheck": Object {
      "enabled": false,
      "filePrefix": ".metro-health-check",
      "interval": 30000,
      "timeout": 5000,
    },
    "unstable_workerThreads": false,
    "watchman": Object {
      "deferStates": Array [
        "hg.update",
      ],
    },
  },
}
`;

exports[`loadConfig injects \`metro-cache\` into the \`cacheStores\` callback 1`] = `
Object {
  "cacheStores": Array [],
  "cacheVersion": "1.0",
  "maxWorkers": 2,
  "projectRoot": "/",
  "reporter": null,
  "resetCache": false,
  "resolver": Object {
    "assetExts": Array [
      "bmp",
      "gif",
      "jpg",
      "jpeg",
      "png",
      "psd",
      "svg",
      "webp",
      "m4v",
      "mov",
      "mp4",
      "mpeg",
      "mpg",
      "webm",
      "aac",
      "aiff",
      "caf",
      "m4a",
      "mp3",
      "wav",
      "html",
      "pdf",
      "yaml",
      "yml",
      "otf",
      "ttf",
      "zip",
    ],
    "assetResolutions": Array [
      "1",
      "1.5",
      "2",
      "3",
      "4",
    ],
    "blockList": /\\(\\\\/__tests__\\\\/\\.\\*\\)\\$/,
    "dependencyExtractor": undefined,
    "disableHierarchicalLookup": false,
    "emptyModulePath": "metro-runtime/src/modules/empty-module",
    "enableGlobalPackages": false,
    "extraNodeModules": Object {},
    "hasteImplModulePath": undefined,
    "nodeModulesPaths": Array [],
    "platforms": Array [
      "ios",
      "android",
      "windows",
      "web",
    ],
    "requireCycleIgnorePatterns": Array [
      /\\(\\^\\|\\\\/\\|\\\\\\\\\\)node_modules\\(\\$\\|\\\\/\\|\\\\\\\\\\)/,
    ],
    "resolveRequest": null,
    "resolverMainFields": Array [
      "browser",
      "main",
    ],
    "sourceExts": Array [
      "js",
      "jsx",
      "json",
      "ts",
      "tsx",
    ],
    "unstable_conditionNames": Array [
      "require",
      "import",
    ],
    "unstable_conditionsByPlatform": Object {
      "web": Array [
        "browser",
      ],
    },
    "unstable_enablePackageExports": false,
    "unstable_enableSymlinks": true,
    "useWatchman": true,
  },
  "serializer": Object {
    "createModuleIdFactory": [Function],
    "customSerializer": null,
    "experimentalSerializerHook": [Function],
    "getModulesRunBeforeMainModule": [Function],
    "getPolyfills": [Function],
    "getRunModuleStatement": [Function],
    "isThirdPartyModule": [Function],
    "polyfillModuleNames": Array [],
    "processModuleFilter": [Function],
  },
  "server": Object {
    "enhanceMiddleware": [Function],
    "forwardClientLogs": true,
    "port": 8081,
    "rewriteRequestUrl": [Function],
    "unstable_serverRoot": null,
    "useGlobalHotkey": true,
    "verifyConnections": false,
  },
  "stickyWorkers": true,
  "symbolicator": Object {
    "customizeFrame": [Function],
    "customizeStack": [Function],
  },
  "transformer": Object {
    "allowOptionalDependencies": false,
    "assetPlugins": Array [],
    "assetRegistryPath": "missing-asset-registry-path",
    "asyncRequireModulePath": "metro-runtime/src/modules/asyncRequire",
    "babelTransformerPath": "metro-babel-transformer",
    "dynamicDepsInPackages": "throwAtRuntime",
    "enableBabelRCLookup": true,
    "enableBabelRuntime": true,
    "getTransformOptions": [Function],
    "globalPrefix": "",
    "hermesParser": false,
    "minifierConfig": Object {
      "compress": Object {
        "reduce_funcs": false,
      },
      "mangle": Object {
        "toplevel": false,
      },
      "output": Object {
        "ascii_only": true,
        "quote_style": 3,
        "wrap_iife": true,
      },
      "sourceMap": Object {
        "includeSources": false,
      },
      "toplevel": false,
    },
    "minifierPath": "metro-minify-terser",
    "optimizationSizeLimit": 153600,
    "publicPath": "/assets",
    "transformVariants": Object {
      "default": Object {},
    },
    "unstable_allowRequireContext": false,
    "unstable_compactOutput": false,
    "unstable_dependencyMapReservedName": null,
    "unstable_disableModuleWrapping": false,
    "unstable_disableNormalizePseudoGlobals": false,
    "unstable_workerThreads": false,
    "workerPath": "metro/src/DeltaBundler/Worker",
  },
  "transformerPath": "",
  "unstable_perfLoggerFactory": [Function],
  "watchFolders": Array [
    "/",
  ],
  "watcher": Object {
    "additionalExts": Array [
      "cjs",
      "mjs",
    ],
    "healthCheck": Object {
      "enabled": false,
      "filePrefix": ".metro-health-check",
      "interval": 30000,
      "timeout": 5000,
    },
    "unstable_workerThreads": false,
    "watchman": Object {
      "deferStates": Array [
        "hg.update",
      ],
    },
  },
}
`;

exports[`loadConfig validates config for projectRoot 1`] = `
"● Validation Error:

  Option \\"projectRoot\\" must be of type:
    string
  but instead received:
    array

  Example:
  {
    \\"projectRoot\\": \\"/path/to/project\\"
  }
"
`;

exports[`loadConfig validates config for server 1`] = `
"● Validation Error:

  Option \\"server.useGlobalHotkey\\" must be of type:
    boolean
  but instead received:
    string

  Example:
  {
    \\"useGlobalHotkey\\": true
  }
"
`;
